--- a/.gitignore
+++ b/.gitignore
@@ -167,3 +167,5 @@ Rx.NET/tools/HomoIcon/HomoIcon.sln.ide/
 Rx.NET/Test/Rx/packages/
 Rx.NET/Samples/Portable/Portable.sln.ide/
 Rx.NET/Samples/Portable/packages/
+
+packages/
